[package]
authors = ["Stephan Eckes <stephan@neodsp.com>"]
categories = ["multimedia::audio"]
description = "Traits to handle all audio data layouts in real-time processes"
edition = "2024"
keywords = ["audio", "dsp", "real-time", "no-std", "neodsp"]
license = "MIT OR Apache-2.0"
name = "audio-blocks"
readme = "README.md"
repository = "https://github.com/neodsp/audio-blocks"
version = "0.1.0"

[dependencies]
rtsan-standalone = "0.1.1"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std"]

alloc = []
rtsan = ["rtsan-standalone/enable"]
std = []

[[bench]]
harness = false
name = "blocks"
