[package]
authors = ["Stephan Eckes <stephan@neodsp.com>"]
categories = ["multimedia::audio"]
description = "Traits to handle all audio data layouts in real-time processes"
edition = "2024"
keywords = ["audio", "dsp", "neodsp", "no-std", "real-time"]
license = "MIT OR Apache-2.0"
name = "audio-blocks"
readme = "README.md"
repository = "https://github.com/neodsp/audio-blocks"
version = "0.2.0"

[dependencies]
num = { version = "0.4.3", default-features = false }
rtsan-standalone = "0.1.2"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std"]

alloc = []
rtsan = ["rtsan-standalone/enable"]
std = []

[[bench]]
harness = false
name = "blocks"
