[package]
authors = ["Stephan Eckes <stephan@neodsp.com>"]
categories = ["multimedia::audio"]
description = "Traits to handle all audio data layouts in real-time processes"
edition = "2024"
keywords = ["audio", "dsp", "neodsp", "no-std", "real-time"]
license = "MIT OR Apache-2.0"
name = "audio-blocks"
readme = "README.md"
repository = "https://github.com/neodsp/audio-blocks"
rust-version = "1.85.0"
version = "0.6.0"

[dependencies]
rtsan-standalone = "0.3.0"

[dev-dependencies]
criterion = "0.8.1"

[features]
default = ["std"]

alloc = []
std = []

[[bench]]
harness = false
name = "blocks"
